--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>com.github.Hempfest</groupId>
             <artifactId>Clans</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.8-R2</version>
         </dependency>
     </dependencies>
 </project>
