--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: ClansMaps
+name: Maps
 version: 1.0.1
 main: com.youtube.hempfest.dynmap.ClansMaps
-api-version: 1.16
+api-version: 1.13
 prefix: Clans
 depend: [ Clans ]
 authors: [ Hempfest ]
