--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.youtube.hempfest.dynmap</groupId>
     <artifactId>ClansMaps</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>ClansMaps</name>
@@ -76,19 +76,15 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.webbukkit.dynmap</groupId>
-            <artifactId>Dynmap</artifactId>
-            <version>3.1-beta-5</version>
-        </dependency>
-        <dependency>
             <groupId>com.github.webbukkit</groupId>
             <artifactId>dynmap-api</artifactId>
             <version>v2.5</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.Hempfest</groupId>
             <artifactId>Clans</artifactId>
-            <version>2.0.8-F</version>
+            <version>2.1.8</version>
         </dependency>
     </dependencies>
 </project>
